# winremote-mcp

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  contributing.md  faq.md  index.md  installation.md  ocr-setup.md  openclaw-integration.md  tier-implementation-design.md
skill/claude/: README.md
skill/cursor/: README.md
skill/openclaw/: SKILL.md
src/winremote/: __init__.py  __main__.py  auth.py  config.py  desktop.py  network.py  ocr.py  process_mgr.py  tiers.py
tests/: conftest.py  test_auth.py  test_config_and_tiers.py  test_desktop_tools.py  test_helpers.py  test_integration.py  test_network.py  test_registry.py  test_security.py  test_services.py  test_shell_tools.py  test_taskmanager.py
